# Phoenix

./: .gitignore  CMakeLists.txt  CREDITS.txt  LICENSE  Phoenix.code-workspace  PhoenixApp.sln  envPhoenix.cmake  imgui.ini
Dependencies/Metis/include/: imgui.ini
Dependencies/Vulkan/1.3.268.0/: InstallationLog.txt  components.xml  maintenancetool.ini
PhoenixApp/: PhoenixApp.cpp  PhoenixApp.vcxproj  PhoenixApp.vcxproj.filters
src/: PhoenixApp.cpp
src/Minerva/: AnimationManager.cpp  AnimationManager.h  Bone.cpp  Bone.h  DebugManager.cpp  DebugManager.h  Device.cpp  Device.h  EngineCamera.cpp  EngineCamera.h  EnginePipeline.cpp  EnginePipeline.h  EngineStartup.cpp  EngineStartup.h  EngineVars.h  Mesh.cpp  Mesh.h  MinervaUI.cpp  MinervaUI.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  TextureManager.cpp  TextureManager.h  VulkanInstance.cpp  VulkanInstance.h  Window.cpp  Window.h  imgui.ini
src/Minerva/Animations/: idle.fbx  monsterIdle.fbx  monsterRun.fbx  monsterWalk.fbx  run.fbx  walk.fbx
src/Minerva/Models/: dancer.mtl  imgui.ini  monster.fbx
src/Minerva/Phoenix/: LODSelectionDispatcher.cpp  LODSelectionDispatcher.h  PhoenixMesh.cpp  PhoenixMesh.h  PhoenixWelzl.cpp  PhoenixWelzl.h  imgui.ini
src/Minerva/Shaders/: ShaderCompiler.bat  base.frag  base.vert  frag.spv  imgui.ini  vert.spv
